<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TextView
        android:id="@+id/text1"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:text="@string/Login"
        android:textSize="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:layout_centerHorizontal="true"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1">
        <EditText
            android:id="@+id/ed11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/emainlogin"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name">
        <EditText
            android:id="@+id/ed12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/passwordlogin"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/Button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginadmin"
        android:layout_below="@id/email"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/Signup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newuserlogin"
        android:textSize="20dp"
        android:layout_below="@id/Button1"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>