<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup"
    android:background="#FF9C27B0">
    <TextView
        android:id="@+id/text1"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:text="@string/Signname"
        android:textStyle="bold"
        android:textSize="20dp"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:layout_centerHorizontal="true"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1">
    <EditText
        android:id="@+id/nameedit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/namesignup"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name1">
        <EditText
            android:id="@+id/email1l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/emainsignup"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email1">
        <EditText
            android:id="@+id/phone2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/numbersignup"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/locality1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone1">
        <EditText
            android:id="@+id/pass1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/passwordsignup"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/locality1">
        <EditText
            android:id="@+id/cnfpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/passconfirmsignup"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/Button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonsignup"
        android:layout_below="@id/pin1"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/login1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button2signup"
        android:textSize="20dp"
        android:layout_below="@id/Button1"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/btt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="show data"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>