<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin"
    android:background="#FF9C27B0">
    <TextView
        android:id="@+id/adminmode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:textStyle="bold"
        android:text="@string/administrator"
        android:layout_centerHorizontal="true"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/adminname1"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adminmode">
        <EditText
            android:id="@+id/ed1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mainadmin"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/adminpassword1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/adminname1"
        android:layout_marginTop="20dp">
        <EditText
            android:id="@+id/ed452"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordadmin"
            android:inputType="numberPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/Button2222"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginadmin"
        android:layout_marginTop="20dp"
        android:layout_below="@id/adminpassword1"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>