<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".issue"
    android:background="#FF9C27B0">


    <TextView
        android:id="@+id/booktitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Return section"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bookname112"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/booktitle">
        <EditText
            android:id="@+id/bname11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/bookname"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/authname111"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookname112"
        android:layout_marginTop="20dp">
        <EditText
            android:id="@+id/author12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/bookauthor" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/buttonn111"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returnbook"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/authname111"
        android:layout_marginTop="10dp"/>
</RelativeLayout>